[semantic_release]
version_variable = setup.py:__version__
hvcs=github
upload_to_pypi=false
major_on_zero=false
branch=main

[flake8]
exclude = .git
max-line-length = 100
ignore = E266,E501,E731
max-cognitive-complexity=10

[requirements-files]
setup_requires = requirements.txt
install_requires = requirements.txt
tests_require = requirements.txt

[options]
setup_requires =
  setuptools==68.2.2
  setuptools-declarative-requirements

[options.data_files]
. = requirements.txt
